--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LingoNote</string>
+    <string name="bottom_menu_notefeed">Notes</string>
+    <string name="bottom_menu_achieve">achieve</string>
 </resources>
