--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">LingoNote</string>
+
+    <string name="sample_banner_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="sample_native_id">ca-app-pub-3940256099942544/2247696110</string>
+    <string name="sample_full_id">ca-app-pub-3940256099942544/1033173712</string>
 </resources>
